# pogl-tp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  blender_export.md  export.sh  libs.md  setup_debug.sh  setup_release.sh  work_share.md
resources/ground/shader/: fragment.glsl  vertex.glsl
resources/shaders/particle_system/: fragment.glsl  vertex.glsl
resources/shaders/textured/: fragment.glsl  vertex.glsl
resources/shaders/uniform/: fragment.glsl  vertex.glsl
resources/shaders/uv_debug/: fragment.glsl
resources/shaders/vert_color/: fragment.glsl  vertex.glsl
src/: main.cc  vertex_data.hh
src/app/: callbacks.cc  callbacks.hh  input.cc  input.hh  lifecycle.cc  lifecycle.hh
src/camera/: camera.cc  camera.hh
src/engine/: engine.cc  engine.hh
src/image/: image_buffer.cc  image_buffer.hh  image_buffer.hxx
src/import/: importer.cc  importer.hh
src/inputstate/: inputstate.cc  inputstate.hh
src/keystate/: keystate.cc  keystate.hh
src/matrix4/: matrix4.cc  matrix4.hh
src/object/: ground_object.cc  ground_object.hh  ground_object_builder.cc  mesh_object_renderer.cc  mesh_object_renderer.hh  mesh_renderer.cc  mesh_renderer.hh  mesh_renderer_builder.cc
src/particle_system/: RawModel.cc  RawModel.hh  loader.cc  loader.hh  particle.cc  particle.hh  particle_renderer.cc  particle_renderer.hh  particle_system.cc  particle_system.hh
src/properties/: drawable.hh  renderable.hh  updateable.hh
src/shader_program/: attribute.cc  attribute.hh  fwd.hh  shader_program.cc  shader_program.hh  uniform.cc  uniform.hh
src/texture/: texture.cc  texture.hh  texture_builder.cc
src/utils/: buffer_offset_macro.hh  definitions.hh  gl_check.hh  log.cc  log.hh  random.hh  utils.cc  utils.hh  utils.hxx
src/vector3/: fwd.hh  vector3.cc  vector3.hh
src/vector4/: fwd.hh  vector4.cc  vector4.hh
